# hyperliquid-copytrade-bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.example  pyproject.toml
copy_trade_bot/: __init__.py  config.py  main.py  types.py
copy_trade_bot/data/: __init__.py  client.py  local_node.py  public_api.py  streaming.py
copy_trade_bot/execution/: __init__.py  engine.py
copy_trade_bot/leaders/: __init__.py  manager.py
copy_trade_bot/risk/: __init__.py  manager.py
copy_trade_bot/signals/: __init__.py  processor.py
copy_trade_bot/storage/: __init__.py  manager.py
copy_trade_bot/utils/: __init__.py  logging.py  metrics.py  retry.py  time.py
scripts/: setup_node.sh  start_bot.sh
tests/: test_config.py
